# dstring

./: CMakeLists.txt  configure  configure.ac
cmake/: Config.cmake.in
include/: Makefile.am  config.h.in  dstring.h
include/dstring/: dstring.h
src/: Makefile.am  dstring.c
tests/: Makefile.am  basic_tests.c
